--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Stream Deck Plugins
-description: A repository for featuring the best plugins for the Elgato StreamDeck
+description: A repository for featuring the best plugins for the Elgato Stream Deck
 google_analytics: UA-132332802-1
 show_downloads: false
 plugins:
