--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ title: Stream Deck Plugins
 description: An unofficial repository featuring the best plugins for the Elgato Stream Deck
 google_analytics: UA-132332802-1
 show_downloads: false
+author: BarRaider, madmatt
 plugins:
   - jemoji
